--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,9 +3,7 @@ import Link from "./Link.astro"
 import TextAnim from "./TextAnim.astro"
 ---
 
-{
-  /*
-  <footer
+<footer
   class:list={[
     "fixed bottom-[var(--fp)] left-[var(--fp)] right-[var(--fp)] z-40",
     Astro.props.class,
@@ -26,13 +24,13 @@ import TextAnim from "./TextAnim.astro"
         ><Link href="https://vercel.com/" target="_blank">Vercel</Link>
       </TextAnim>
     </p>
-    <p class="hidden lg:inline">
+    <p class="hidden lg:inline text-2xs">
       <TextAnim>Created with</TextAnim>
       <TextAnim
         ><Link href="https://astro.build/" target="_blank">Astro</Link>
       </TextAnim>
     </p>
-    <p class="text-right hidden lg:inline">
+    <p class="text-right hidden lg:inline text-2xs">
       <TextAnim>Powered by</TextAnim>
       <TextAnim
         ><Link href="https://vercel.com/" target="_blank">Vercel</Link>
@@ -40,5 +38,3 @@ import TextAnim from "./TextAnim.astro"
     </p>
   </div>
 </footer>
-*/
-}
