--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,6 @@ import Projects from "@/sections/Projects.section.astro"
 <Root>
   <Hero />
   <Projects />
-  <div class="h-full"></div>
-  <div class="h-full"></div>
-  <div class="h-full"></div>
+  <div class="h-full bg-red-950/80"></div>
+  <div class="h-full bg-blue-950/80"></div>
 </Root>
