--- a/src/sections/Projects.section.astro
+++ b/src/sections/Projects.section.astro
@@ -8,7 +8,13 @@ const projects: ProyectInterface[] = [
     date: "2024",
     stack: ["React", "TypeScript", "TailwindCSS"],
     title: "Project 1",
-    type: "web",
+    type: "Web",
+    img: {
+      alt: "",
+      height: 1200,
+      width: 800,
+      src: "/img/imangelo-screenshot.png",
+    },
     description:
       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc.",
   },
@@ -16,7 +22,13 @@ const projects: ProyectInterface[] = [
     date: "2024",
     stack: ["React", "TypeScript", "TailwindCSS"],
     title: "Project 2",
-    type: "web",
+    type: "Web",
+    img: {
+      alt: "",
+      height: 1200,
+      width: 800,
+      src: "/img/imangelo-screenshot.png",
+    },
     description:
       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc.",
   },
@@ -24,29 +36,99 @@ const projects: ProyectInterface[] = [
     date: "2024",
     stack: ["React", "TypeScript", "TailwindCSS"],
     title: "Project 3",
-    type: "web",
+    type: "Web",
+    img: {
+      alt: "",
+      height: 1200,
+      width: 800,
+      src: "/img/imangelo-screenshot.png",
+    },
+    description:
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc.",
+  },
+  {
+    date: "2024",
+    stack: ["React", "TypeScript", "TailwindCSS"],
+    title: "Project 4",
+    type: "Web",
+    img: {
+      alt: "",
+      height: 1200,
+      width: 800,
+      src: "/img/imangelo-screenshot.png",
+    },
+    description:
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc.",
+  },
+  {
+    date: "2024",
+    stack: ["React", "TypeScript", "TailwindCSS"],
+    title: "Project 5",
+    type: "Web",
+    img: {
+      alt: "",
+      height: 1200,
+      width: 800,
+      src: "/img/imangelo-screenshot.png",
+    },
+    description:
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc.",
+  },
+  {
+    date: "2024",
+    stack: ["React", "TypeScript", "TailwindCSS"],
+    title: "Project 6",
+    type: "Web",
+    img: {
+      alt: "",
+      height: 1080,
+      width: 1920,
+      src: "/img/imangelo-screenshot.png",
+    },
     description:
       "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc.",
   },
 ]
 ---
 
-<Section
+<div
   id="projects-section"
-  class="sticky top-0 h-[200vh]"
-  frameColor="hsl(var(--border))"
+  class="relative"
+  style={`height: ${projects.length - 1}00vh;`}
 >
-  <h2
-    class="font-extrabold text-5xl xs:text-6xl md:text-7xl xl:text-8xl text-right mt-28 mb-8"
+  <Section
+    frameColor="hsl(var(--border))"
+    class="flex sticky top-0 h-[calc(100vh-var(--fp)*2)] p-0"
   >
-    PROJECTS
-  </h2>
-  <div id="projects-list" class="flex overflow-x-scroll">
+    <h2 class="text-8xl font-black absolute right-4 top-20 uppercase">
+      Projects
+    </h2>
     {
       projects.map((p) => (
-        <Project project-item class="flex-[0_0_auto]" {...p} />
+        <Project project-item class="flex-none size-full" {...p} />
       ))
     }
-  </div>
-  <div class="progress-bar fixed bottom-4 left-0 w-full bg-green-400 h-2 scale-0"></div>
-</Section>
+  </Section>
+</div>
+
+<script>
+  import { scroll, animate } from "motion"
+
+  scroll(
+    animate("[project-item]", {
+      transform: ["translateX(10%)", `translateX(-510%)`],
+    }),
+    {
+      container: document.getElementById("content")!,
+      target: document.getElementById("projects-section")!,
+    }
+  )
+
+  document.querySelectorAll("[project-item]").forEach((el) => {
+    scroll(animate(el, { opacity: [0, 1, 1, 0] }), {
+      container: document.getElementById("content")!,
+      target: el,
+      offset: ["start end", "end end", "start start", "end start"],
+    })
+  })
+</script>
