projects redesign & colors in frame

--- a/src/components/MenuBtn.astro
+++ b/src/components/MenuBtn.astro
@@ -1,12 +1,11 @@
 ---
 import { ArrowRight } from "lucide"
-import Footer from "./Footer.astro"
 import Link from "./Link.astro"
 import LucideIcon from "./LucideIcon.astro"
 import TextAnim from "./TextAnim.astro"
 ---
 
-<div class="lg:hidden absolute top-[var(--fp)] right-[var(--fp)] z-40">
+<div class="xl:hidden absolute top-[var(--fp)] right-[var(--fp)] z-40">
   <button
     id="btn-menu"
     type="button"
@@ -24,7 +23,7 @@ import TextAnim from "./TextAnim.astro"
 <div
   id="ctn-menu"
   class={`
-    lg:hidden
+    xl:hidden
     fixed top-0 left-0 size-full bg-background p-4 uppercase
     opacity-0 pointer-events-none transition duration-300
   `}
@@ -83,7 +82,6 @@ import TextAnim from "./TextAnim.astro"
       </div>
     </div>
   </div>
-  <Footer />
 </div>
 
 <style>
