--- a/src/components/PageFrame.astro
+++ b/src/components/PageFrame.astro
@@ -1,13 +1,11 @@
 <div
   id="page-frame"
-  style="--color: #000;"
-  class="p-[var(--fp)] size-full fixed top-0 left-0 bg-[var(--color)] transition-all duration-300 ease-in-out"
+  class="p-[var(--fp)] size-full fixed top-0 left-0 bg-[hsl(var(--frame-color))] transition-all duration-500 ease-in-out"
 >
   <div class="relative size-full rounded-2xl bg-background"></div>
 </div>
 
 <script>
-  const frame = document.querySelector("#page-frame") as HTMLDivElement
   const sections = document.querySelectorAll<HTMLDivElement>("[section]")
 
   sections.forEach((s) => {
@@ -15,12 +13,19 @@
       (entries) => {
         entries.forEach((entry) => {
           if (entry.isIntersecting) {
-            frame.style.setProperty("--color", `${s.dataset.color}`)
+            document.body.style.setProperty(
+              "--frame-color",
+              `${s.dataset["frame-color"]}`
+            )
+            document.body.style.setProperty(
+              "--header-foreground",
+              `${s.dataset["header-foreground"]}`
+            )
           }
         })
       },
       {
-        threshold: 0.5,
+        threshold: s.dataset.threshold ? +s.dataset.threshold : 0.5,
       }
     )
     observer.observe(s)
