--- a/src/sections/Hero.section.astro
+++ b/src/sections/Hero.section.astro
@@ -32,8 +32,7 @@ import Mesh from "@/svgs/Mesh.svg.astro"
     />
   </div>
 </Section>
-<!-- <StarsEffect /> -->
-<div class="h-full"></div>
+<StarsEffect class="h-full" />
 
 <style>
   #mesh {
