--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,16 +7,17 @@ import TextAnim from "./TextAnim.astro"
 ---
 
 <header
-  class="fixed top-[var(--fp)] left-[var(--fp)] right-[var(--fp)] p-4 z-30 uppercase"
+  style="--foreground: var(--header-foreground)"
+  class="fixed top-[var(--fp)] left-[var(--fp)] right-[var(--fp)] p-4 z-30 uppercase text-foreground"
 >
   <div
-    class="flex items-center lg:items-start justify-between text-xs font-mono"
+    class="flex items-center xl:items-start justify-between text-xs font-mono"
   >
     <p class="text-base font-bold select-none">
       <TextAnim>Michelangelo</TextAnim>
     </p>
     <!-- Desktop -->
-    <div class="hidden lg:flex text-xs gap-x-12">
+    <div class="hidden xl:flex text-xs gap-x-12">
       <p>
         <TextAnim>Write me an email</TextAnim>
         <TextAnim>
@@ -41,7 +42,7 @@ import TextAnim from "./TextAnim.astro"
       </p>
     </div>
     <nav
-      class="hidden lg:block *:flex *:items-center *:justify-end *:gap-x-1.5"
+      class="hidden xl:block *:flex *:items-center *:justify-end *:gap-x-1.5"
     >
       <p>
         <TextAnim>
