--- a/src/components/NoiseEffect.astro
+++ b/src/components/NoiseEffect.astro
@@ -21,7 +21,7 @@
 
     for (let i = 0; i < len; i++) {
       if (Math.random() < 0.5) {
-        buffer32[i] = 0xffffffff
+        buffer32[i] = 0xaaffffff
       }
     }
 
