--- a/src/components/PageFrame.astro
+++ b/src/components/PageFrame.astro
@@ -15,11 +15,11 @@
           if (entry.isIntersecting) {
             document.body.style.setProperty(
               "--frame-color",
-              `${s.dataset["frame-color"]}`
+              `${s.dataset.frameColor}`
             )
             document.body.style.setProperty(
               "--header-foreground",
-              `${s.dataset["header-foreground"]}`
+              `${s.dataset.headerForeground}`
             )
           }
         })
