--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -29,7 +29,7 @@ const {
   {...props}
 >
   <div
-    class="flex flex-col lg:flex-row justify-center gap-y-8 gap-x-14 xl:max-w-screen-xl px-12 2xl:px-8"
+    class="flex flex-col lg:flex-row justify-center gap-y-8 gap-x-14 xl:max-w-screen-xl px-4 sm:px-12 2xl:px-8"
   >
     <div class="flex-1">
       <img
