--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,11 @@
 import Root from "@/layouts/Root.layout.astro"
 import Hero from "@/sections/Hero.section.astro"
 import Projects from "@/sections/Projects.section.astro"
+import TechSkills from "@/sections/TechSkills.section.astro"
 ---
 
 <Root>
   <Hero />
   <Projects />
+  <TechSkills />
 </Root>
