--- a/src/sections/ProjectsMobile.section.astro
+++ b/src/sections/ProjectsMobile.section.astro
@@ -11,8 +11,7 @@ import projects from "@/data/projects.json"
   class="xl:hidden h-auto p-0"
 >
   <h2
-    projects-title
-    class="text-5xl xs:text-6xl sm:text-7xl font-black uppercase mt-16 text-right text-foreground pr-4"
+    class="text-5xl xs:text-6xl sm:text-7xl font-black uppercase mt-16 text-right pr-4"
   >
     Projects
   </h2>
