--- a/src/layouts/Root.layout.astro
+++ b/src/layouts/Root.layout.astro
@@ -13,10 +13,7 @@ import "@/styles/global.css"
     <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml" />
     <title>Document</title>
   </head>
-  <body
-    class="font-sans text-foreground bg-black h-dvh"
-    style="--frame-color: var(--border); --header-foreground: var(--foreground)"
-  >
+  <body class="font-sans text-foreground bg-black h-dvh">
     <PageFrame />
     <Header />
     <main class="h-full p-[var(--fp)]">
