--- a/src/sections/ProjectsDesktop.section.astro
+++ b/src/sections/ProjectsDesktop.section.astro
@@ -12,12 +12,10 @@ import projects from "@/data/projects.json"
 >
   <Section class="flex sticky top-0 h-[calc(100vh-var(--fp)*2)] p-0">
     <h2
-      projects-title
       class={`
         text-5xl sm:text-6xl md:text-7xl lg:text-8xl
         absolute right-4 top-20
-        uppercase text-foreground font-black
-        transition
+        uppercase font-black
       `}
     >
       Projects
