improves in hero section & new descriptions in projects

--- a/src/components/PageFrame.astro
+++ b/src/components/PageFrame.astro
@@ -21,6 +21,10 @@
               "--header-foreground",
               `${s.dataset.headerForeground}`
             )
+            document.body.style.setProperty(
+              "--foreground",
+              `${s.dataset.bodyForeground}`
+            )
           }
         })
       },
