--- a/src/sections/ProjectsMobile.section.astro
+++ b/src/sections/ProjectsMobile.section.astro
@@ -5,11 +5,7 @@ import type { Project as ProyectInterface } from "@/interfaces/project.interface
 import projects from "@/data/projects.json"
 ---
 
-<Section
-  frameThreshold={0}
-  frameColor="var(--border)"
-  class="xl:hidden h-auto p-0"
->
+<Section frameThreshold={0} class="xl:hidden h-auto p-0">
   <h2
     class="text-5xl xs:text-6xl sm:text-7xl font-black uppercase mt-16 text-right pr-4"
   >
