--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,3 +80,8 @@ p {
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Roboto Flex";
+  src: url("/fonts/RobotoFlex-Variable.ttf") format("truetype");
+}
