--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import TextAnim from "./TextAnim.astro"
     class="flex items-center xl:items-start justify-between text-xs font-mono"
   >
     <p class="text-base font-bold select-none">
-      <TextAnim>Michelangelo</TextAnim>
+      <TextAnim>[MK24]</TextAnim>
     </p>
     <!-- Desktop -->
     <div class="hidden xl:flex text-xs gap-x-12">
