--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -15,6 +15,7 @@ const {
   frameColor = "0 0 42",
   headerForeground = "0 0 72",
   bodyForeground = "0 0 72",
+  bodyBackground = "0 0 0",
   frameThreshold = 0.5,
   ...props
 } = Astro.props
@@ -26,9 +27,10 @@ const {
   data-frame-color={frameColor}
   data-header-foreground={headerForeground}
   data-body-foreground={bodyForeground}
+  data-body-background={bodyBackground}
   data-threshold={frameThreshold}
   class={cn(
-    "size-full p-4 overflow-hidden text-[hsl(var(--foreground))] transition-all duration-300 ease-in-out",
+    "size-full p-4 overflow-hidden",
     Astro.props.class
   )}
 >
