--- a/src/layouts/Root.layout.astro
+++ b/src/layouts/Root.layout.astro
@@ -13,7 +13,7 @@ import "@/styles/global.css"
     <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml" />
     <title>Document</title>
   </head>
-  <body class="font-sans text-foreground bg-black h-dvh">
+  <body class="font-sans text-foreground bg-background h-dvh">
     <PageFrame />
     <Header />
     <main class="h-full p-[var(--fp)]">
